# autoGR

./: CMakeLists.txt
src/: CMakeLists.txt  driver.f90  driver2.f90  lat_id_driver.f90
